test/error/parser/anon-struct-missing-end.dsk
struct Wrapper
    inner: struct
        a: int
